--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -142,6 +142,11 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 
 #home-top-right {
 	margin-left: 40px;
+	position: relative;
+	left: -2px;
+	border: solid;
+	border-color: #006012;
+	border-width: 2px;
 }
 
 #roachy {
