--- a/app/views/shared/_fixed_back_end_nav.html.erb
+++ b/app/views/shared/_fixed_back_end_nav.html.erb
@@ -67,6 +67,9 @@
         <li class="">
           <%= link_to "Roachy", user_lessons_path( current_user ) if current_user.can?("create", "lessons") %>
         </li>
+        <li class="">
+          <%= link_to "Ads", user_ads_path( current_user ) if current_user.can?("create", "ads") || true %>
+        </li>
         <!--
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Daily Specials<b class="caret"></b></a>
