Created Dispensary admin section

--- a/app/views/shared/_flash_vid.html.erb
+++ b/app/views/shared/_flash_vid.html.erb
@@ -5,6 +5,7 @@
 <param name="width" value="200" />
 <param name="quality" value="high" />
 <param name="menu" value="false" />
+<param name="wmode" value="transparent" />
 <param name="allowscriptaccess" value="samedomain" />
 <p>Adobe <a href="http://get.adobe.com/flashplayer/">Flash Player</a> is required to view this content.</p>
 </object>
