--- a/app/views/shared/_fixed_back_end_nav.html.erb
+++ b/app/views/shared/_fixed_back_end_nav.html.erb
@@ -59,6 +59,7 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">My Listings<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><%= link_to "manage", user_dispensaries_path( current_user ) %></li>
+            <li><%= link_to "administer", user_dispensaries_admin_path( current_user ) %></li>
           </ul>
         </li>
         <li class="">
