Fixed main logo css

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -45,17 +45,17 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 #cat-container {
 	position: relative;
 	width: 500px;
-	img {
-		position: relative;
-		top: -25px;
-		left: 11px;
-	}
 }
 
+img.main-logo {
+	position: relative;
+	top: -25px;
+	left: 11px;
+}
 #cat-text {
 	position: absolute;
 	left: 284px;
-  top: 90px;
+  top: -88px;
 	color: white;
 	font-weight: bold;
 }
@@ -1410,7 +1410,7 @@ old.spin div:hover{
 #body1 {
 	width: 100%;
 	font-size: 12pt;
-	background: url('/assets/bg_leftside_final.jpg'), url('/assets/bg_rightside_final2.jpg');
+	background: url('/assets/bg_leftside_final3.jpg'), url('/assets/bg_rightside_final2.jpg');
 	background-repeat:no-repeat, no-repeat;
 	background-position: left top, right top;
 	background-color: white;
@@ -2036,8 +2036,4 @@ textarea {
 			background-color: #EBF3EC;
 		}
 	}
-}
-
-.sub-news {
-	display: none;
 }
