fixed header for now

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -48,14 +48,14 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 }
 
 img.main-logo {
-	position: relative;
-	top: -25px;
-	left: 11px;
+	position: absolute;
+	top: -8px;
+	left: 79px;
 }
 #cat-text {
 	position: absolute;
-	left: 284px;
-  top: -88px;
+	left: 35px;
+  top: 90px;
 	color: white;
 	font-weight: bold;
 }
@@ -1715,7 +1715,7 @@ a:hover{
 	background-repeat: repeat-x;
 	background-color: #006012;
 	margin-top: 0em;
-	padding-left: 9%;
+	padding-left: 25%;
 	height: 158px;
 	background-image:url('/images/site/extended_top_bg.png');
 	background-repeat: no-repeat;
