Listing show page update

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2036,3 +2036,63 @@ textarea {
 		}
 	}
 }
+
+#listing-show-social {
+	position: relative;
+	top: 7px;
+	left: 184px;
+	img {
+		top: 7px;
+		position: relative;
+	}
+}
+
+#listing-show-icons {
+	position: relative;
+	top: 48px;
+	left: -91px;
+}
+
+.listing-show-info-box {
+	p {
+		background-color: #EBF3EC;
+		padding: 10px;
+	}
+}
+
+.listing-show-info-box {
+	p {
+		background-color: #EBF3EC;
+		padding: 10px;
+		min-height: 84px;
+		img {
+			margin-right: 15px;
+			float: left;
+		}
+	}
+}
+
+.listing-comment {
+	margin-bottom: 10px;
+}
+
+.listing-leave-comment {
+	background-color: #EBF3EC;
+	padding: 10px;
+	min-height: 84px;
+	width: 465px;
+	textarea {
+		width: 457px !important;
+		height: 87px;
+	}
+}
+
+.listing-show-info-box-row {
+	margin-bottom: 10px;
+}
+
+.listing-show-ads {
+	position: relative;
+	top: -11px;
+	left: -34px;
+}
