--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
 <div id="article-container">
- <div class="row">
+ <div class="row main-new-image">
 	<%= image_tag "dispatches_top.jpg"%>
     </div>
 <p id="notice"><%= notice %></p>
