--- a/app/views/shared/_fixed_back_end_nav.html.erb
+++ b/app/views/shared/_fixed_back_end_nav.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="span3" id="backendlogomaster"><%= image_tag "masterbackend-01.png"%></div>
+    <div class="span3" id="backendlogomaster"><%= image_tag "cpinterface.png"%></div>
     <!--
       <div class="span3 offset4" id="backend-search">
         <form class="navbar-search pull-left">
