--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,2 +1,42 @@
-<div class="row footerfill" id="footer">
+<div class="footerfill" id="footer">
+	<div class="footer-cat-background">
+	<div />
+	<table>
+		<tr class="header">
+			<td>ABOUT</td>
+			<td>SITE DIRECTORY</td>
+			<td>CANNAPAGES FAMILY</td>
+			<td>IMPORTANT LINKS</td>
+			<td>SOCIAL MEDIA</td>
+		</tr>
+		<tr>
+			<td>About Cannapages</td>
+			<td>Listings Search Engine</td>
+			<td>ADILAS/CanaMerchant</td>
+			<td>Business Resources</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>Contact Us</td>
+			<td>News</td>
+			<td>Cronic Magazine</td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>Advertise with Us</td>
+			<td>Exclusive Editorials</td>
+			<td>First Rank</td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>Get FREE listing</td>
+			<td>Application Interface</td>
+			<td>Sigil Development</td>
+			<td></td>
+			<td></td>
+		</tr>
+	</table>
 </div>
+<div class="social-media-links"><%= image_tag "fb-icon-footer.png" %><%= image_tag "twit-icon-footer.png" %></div>
