--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/sub_news" %>
- <div class="row">
+ <div class="row main-new-image">
 	<%= image_tag "dispatches_top.jpg"%>
     </div>
 
