--- a/app/views/dispensaries/_form.html.erb
+++ b/app/views/dispensaries/_form.html.erb
@@ -7,6 +7,8 @@
     <%= f.input :state, :collection => LEGAL_STATE_ARRAY %>
     <%= f.input :zip_code %>
     <%= f.input :phone_number %>
+    <%= f.input :twitter %>
+    <%= f.input :facebook %>
     <%= f.input :glass_sale, :collection => YESNO %>
     <%= f.input :whole_sale, :collection => YESNO %>
     <%= f.input :match_coupons, :collection => YESNO %>
