--- a/app/views/searches/_critiques_cat.html.erb
+++ b/app/views/searches/_critiques_cat.html.erb
@@ -1,4 +1,4 @@
-<div class="dropdown">
+<div class="dropdown hidden">
 <%= link_to( image_tag( "/images/icons/browse-top.png", id: "cat-select" ),
 												"#", class: "dropdown-toggle" ) %>
 	<ul class="dropdown-menu cat-select-menu" role="menu" aria-labelledby="dLabel">
