--- a/app/views/shared/_newheader.html.erb
+++ b/app/views/shared/_newheader.html.erb
@@ -15,10 +15,12 @@
   <div class="row" id="searchbar">
   	<div class="span3">
 				<%= image_tag "top-logo.png", class: "main-logo" %>
+			<% if params[:controller] == "dispensaries" %>
 			<div id="cat-container">
 				<% catClass = (params[:controller] == "volumes") ? "hidden" : "" %>
 				<p id="cat-text" class="<%= catClass %>">Browse <span id="cat-text-value">All Categories</span></p>
 			</div>
+			<% end %>
 		</div>
 		<div class="span9">
 			
@@ -55,8 +57,8 @@
 																		"data-toggle" => :modal ) %>
 					<% end %>
 					
-					<%= link_to( image_tag( "/images/icons/wiki-top.png", class: "canna-link" ), "#strain-wiki", "data-toggle"=> :modal ) %>
-					<%= link_to( image_tag( "/images/icons/saver-top.png", class: "canna-link" ), "#cannasaver", "data-toggle" => :modal ) %>
+					<% link_to( image_tag( "/images/icons/wiki-top.png", class: "canna-link" ), "#strain-wiki", "data-toggle"=> :modal ) %>
+					<% link_to( image_tag( "/images/icons/saver-top.png", class: "canna-link" ), "#cannasaver", "data-toggle" => :modal ) %>
 				</div>
 			</div>
 
