--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "form", locals: { user: @user, con: :users, act: :create %>
+<%= render partial: "form", locals: { user: @user, con: :users, act: :create } %>
