--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -42,6 +42,17 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 	}
 }
 
+#tipybottom {
+	background-color: #1B4D1A;
+	border-top: solid #052B04 1px;
+	a {
+		color: #B9D2BD;
+	}
+	span {
+		color: white;
+	}
+}
+
 #cat-container {
 	position: relative;
 	width: 500px;
@@ -108,6 +119,10 @@ img.main-logo {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	padding-left: 20px;
+	img {
+		float: left;
+		margin-right: 20px;
+	}
 }
 
 /* end critiques */
@@ -2163,4 +2178,15 @@ li.canna-wisdom {
 	position: relative;
 	top: -100px;
 	left: 72.5%;
+}
+
+.subnavnews {
+	margin-bottom: 20px;
+	a {
+		color: white;
+	}
+}
+
+.right {
+	float: right;
 }
