--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/news_sub_nav" %>
 <div id="article-container">
  <div class="row main-new-image">
 	<%= image_tag "dispatches_top.jpg"%>
