--- a/app/views/shared/_newheader.html.erb
+++ b/app/views/shared/_newheader.html.erb
@@ -18,6 +18,7 @@
 			<% if params[:controller] == "dispensaries" %>
 			<div id="cat-container">
 				<% catClass = (params[:controller] == "volumes") ? "hidden" : "" %>
+				<% catClass = "hidden" if params[:controller] == "articles" %>
 				<p id="cat-text" class="<%= catClass %>">Browse <span id="cat-text-value">All Categories</span></p>
 			</div>
 			<% end %>
@@ -64,5 +65,4 @@
 
 		</div>
 	</div>
-
 </div>
