--- a/app/views/shared/_sub_news.html.erb
+++ b/app/views/shared/_sub_news.html.erb
@@ -1,11 +1,8 @@
 <div class="row mbwrapper2 sub-news">
-	<div class= header>
-		<div class="subnav">
-			<ul class="nav nav-pills">
-				<li><%= link_to "Dispatches", volume_path( Volume.the_current ) %></li>
-				<li><%= link_to "Dispatches Archives", volumes_path %></li>
-				<li><%= link_to "Articles", articles_path %></li>
-			</ul>
-		</div>
-	</div>
+	<p>Testing</p>	
 </div>
+
+
+				<% link_to "Dispatches", volume_path( Volume.the_current ) %>
+				<% link_to "Dispatches Archives", volumes_path %>
+				<% link_to "Articles", articles_path %>
