--- a/app/views/volumes/show.html.erb
+++ b/app/views/volumes/show.html.erb
@@ -1,6 +1,5 @@
-<%= render "shared/sub_news" %>
-
- <div class="row main-new-image">
+<%= render "shared/news_sub_nav.html.erb" %>
+<div class="row main-new-image">
 	<%= image_tag "dispatches_top.jpg"%>
     </div>
     <div class="row">
