--- a/app/views/searches/_articles_cat.html.erb
+++ b/app/views/searches/_articles_cat.html.erb
@@ -1,6 +1,6 @@
 <div class="dropdown">
 <%= link_to( image_tag( "/images/icons/browse-top.png", id: "cat-select" ),
-												"#", class: "dropdown-toggle" ) %>
+												"#", class: "dropdown-toggle hidden" ) %>
 	<ul class="dropdown-menu cat-select-menu" role="menu" aria-labelledby="dLabel">
 		<li class="cat-select-btn"><p>All Categories</p></li>
 		<li class="cat-select-btn"><p>Law</p></li>
