--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -123,6 +123,22 @@ img.main-logo {
 		float: left;
 		margin-right: 20px;
 	}
+	a {
+		color: black;
+	}
+}
+
+.critiques-container-show {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 20px;
+	img {
+		float: left;
+		margin-right: 20px;
+	}
+	a {
+		color: black;
+	}
 }
 
 /* end critiques */
@@ -1236,7 +1252,7 @@ old.spin div:hover{
 
 .footerfill {
   background-color: #006012;
-	height: 170px;
+	height: 199px;
 	margin-right: 0;
 	width: 100%;
 }
@@ -1334,8 +1350,6 @@ old.spin div:hover{
 	padding: 25px 0px 25px 0px;
 	border-top-style:hidden;
 	border-right-style:hidden;
-	border-bottom-style:solid;
-	border-bottom-width: thin;
 	border-left-style:hidden;
 	border-color:rgb(226,226,226);
 	img{
@@ -2158,7 +2172,7 @@ li.canna-wisdom {
 		color: white;
 		margin: auto;
 		position: relative;
-		top: 2px;
+		top: -56px;
 		font-size: 10pt;
 		td {
 			padding-right: 38px;
@@ -2176,8 +2190,10 @@ li.canna-wisdom {
 .social-media-links {
 	width: 130px;
 	position: relative;
-	top: -100px;
-	left: 72.5%;
+	top: 24px;
+	left: 356px;
+	margin: auto;
+	z-index: 99;
 }
 
 .subnavnews {
@@ -2189,4 +2205,8 @@ li.canna-wisdom {
 
 .right {
 	float: right;
+}
+
+#table-wrap {
+	position: relative;
 }
