--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,6 +8,11 @@
 <div class="footerfill" id="footer">
 	<div class="footer-cat-background">
 	<div />
+	<div id="table-wrap">
+		<div class="social-media-links">
+			<%= link_to( image_tag( "fb-icon-footer.png" ), "https://www.facebook.com/cannapages.colorado" ) %>
+			<%= link_to( image_tag( "twit-icon-footer.png" ), "https://twitter.com/Cannapages" ) %>
+		</div>
 	<table>
 		<tr class="header">
 			<td>ABOUT</td>
@@ -45,8 +50,5 @@
 			<td></td>
 		</tr>
 	</table>
-</div>
-<div class="social-media-links">
-	<%= link_to( image_tag( "fb-icon-footer.png" ), "https://www.facebook.com/cannapages.colorado" ) %>
-	<%= link_to( image_tag( "twit-icon-footer.png" ), "https://twitter.com/Cannapages" ) %>
+	</div>
 </div>
