--- a/app/views/shared/_news_sub_nav.html.erb
+++ b/app/views/shared/_news_sub_nav.html.erb
@@ -1,4 +1,5 @@
 <p class="subnavnews">
 <span class="label label-success"><%= link_to "Previous Dispatches", volumes_path %></span>
+<span class="label label-success"><%= link_to "Today's Dispatches", current_volume_path %></span>
 <span class="label label-success right"><%= link_to "Articles List", articles_path %></span>
 </p> 
