--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for user, url: { controller: con, action: act } do |f| %>
+<%= form_for user, url: { controller: con, action: act, method: :post } do |f| %>
   <% if user.errors.any? %>
     <div class="error_messages">
       <h2>Form is invalid</h2>
@@ -26,5 +26,7 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation %>
   </div>
+	<p>We must verify you are indeed human</p>
+	<%= recaptcha_tags %>
   <div class="actions"><%= f.submit "Sign Up" %></div>
 <% end %>
