--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2210,3 +2210,17 @@ li.canna-wisdom {
 #table-wrap {
 	position: relative;
 }
+
+#volume-header {
+	position: absolute;
+	top: 143px;
+	left: 145px;
+	z-index: 99;
+}
+
+#volume-date {
+	position: absolute;
+	top: 143px;
+	left: 243px;
+	z-index: 99;
+}
