--- a/app/views/volumes/show.html.erb
+++ b/app/views/volumes/show.html.erb
@@ -1,15 +1,9 @@
 <%= render "shared/news_sub_nav.html.erb" %>
+	<h4 id="volume-header">Volume <%= @volume.id %></h4>
+	<h4 id="volume-date"><%= @volume.created_at.to_date %></h4>
 <div class="row main-new-image">
 	<%= image_tag "dispatches_top.jpg"%>
-    </div>
-    <div class="row">
-        <div class="span2">
-            <div class=cbnewstextsubone><h4>Volume <%= @volume.id %></h4></div>
-        </div>
-        <div class="span2 offset3">
-            <div class=cbnewstextsubone><h4><%= @volume.created_at.to_date %></h4></div>
-        </div>
-    </div>
+</div>
 <hr />    
     <div class="row">
         <div class="span3">
@@ -21,7 +15,7 @@
         </div>
         <div class="span6">
             <div class="cbnewstextmiddle" style="font-family: sans-serif">
-                 <center><%= image_tag @volume.photo.url, width: "300", height: "300" %></center>
+                 <center><%= image_tag @volume.photo.url, width: "400", height: "300" %></center>
                 <br>
                   <% @col_array[1].each do |a| %>
                     <%= render "articles/article_exerpt", article: a %>
